white gap fix attemot no 17

--- a/style.css
+++ b/style.css
@@ -56,6 +56,10 @@ footer{
     width: 100%;
 
 }
+.buffer{
+    height: 50px;
+    background: inherit;
+}
 .header-icon{
     width: 40vw;
     max-width: 150px;
